--- a/_config-dev.yml
+++ b/_config-dev.yml
@@ -10,7 +10,7 @@ title: Activity Campaign
 email: nukeador@mozilla.com
 description: > # this means to ignore newlines until "baseurl:"
     Mozilla Activity Campaign
-baseurl: "/activity-campaign" # the subpath of your site, e.g. /blog
+baseurl: "/activate.mozilla.community" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site
 twitter_username: mozparticipate
 github_username:  mozilla
