--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,8 @@ title: Activity Campaign
 email: nukeador@mozilla.com
 description: > # this means to ignore newlines until "baseurl:"
     Mozilla Activity Campaign
-baseurl: "/activity-campaign" # the subpath of your site, e.g. /blog
-url: "https://nukeador.github.io/" # the base hostname & protocol for your site
+baseurl: "/activate.mozilla.community" # the subpath of your site, e.g. /blog
+url: "https://mozilla.github.io" # the base hostname & protocol for your site
 twitter_username: mozparticipate
 github_username:  mozilla
 
