--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site settings
 title: Activity Campaign
-email: nukeador@mozilla.com
+email: participation@mozilla.com
 description: > # this means to ignore newlines until "baseurl:"
     Mozilla Activity Campaign
 baseurl: "/activate.mozilla.community" # the subpath of your site, e.g. /blog
