--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Activity Campaign
+title: Activate Mozilla
 email: participation@mozilla.com
 description: > # this means to ignore newlines until "baseurl:"
-    Mozilla Activity Campaign
+    Activate Mozilla
 baseurl: "/activate.mozilla.community" # the subpath of your site, e.g. /blog
 url: "https://mozilla.github.io" # the base hostname & protocol for your site
 twitter_username: mozparticipate
