--- a/_config-dev.yml
+++ b/_config-dev.yml
@@ -10,7 +10,7 @@ title: Activate Mozilla
 email: participation@mozilla.com
 description: > # this means to ignore newlines until "baseurl:"
     Get involved with the focus initiatives at Mozilla
-baseurl: "/activate.mozilla.community" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site
 twitter_username: mozparticipate
 github_username:  mozilla
