--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title: Activate Mozilla
 email: participation@mozilla.com
 description: > # this means to ignore newlines until "baseurl:"
-    Get involved with the focus initiatives at Mozilla
+    Activate at Mozilla!
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://activate.mozilla.community" # the base hostname & protocol for your site
 twitter_username: mozparticipate
