--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ email: participation@mozilla.com
 description: > # this means to ignore newlines until "baseurl:"
     Get involved with the focus initiatives at Mozilla
 baseurl: "/activate.mozilla.community" # the subpath of your site, e.g. /blog
-url: "https://activate.mozilla.community" # the base hostname & protocol for your site
+url: "" # the base hostname & protocol for your site
 twitter_username: mozparticipate
 github_username:  mozilla
 
