--- a/_config-dev.yml
+++ b/_config-dev.yml
@@ -14,6 +14,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site
 twitter_username: mozparticipate
 github_username:  mozilla
+api_base_url: http://localhost:5500
 
 # Build settings
 markdown: kramdown
