--- a/api/package.json
+++ b/api/package.json
@@ -16,6 +16,7 @@
     "googleapis": "^19.0.0",
     "node-fetch": "^1.6.3",
     "promise-map-series": "^0.2.3",
-    "readline": "^1.3.0"
+    "readline": "^1.3.0",
+    "sanitize-html": "^1.14.1"
   }
 }
