--- a/api/package.json
+++ b/api/package.json
@@ -15,6 +15,7 @@
     "express": "~4.14.0",
     "google-auth-library": "^0.10.0",
     "googleapis": "^19.0.0",
+    "node-cron": "^1.2.0",
     "node-fetch": "^1.6.3",
     "promise-map-series": "^0.2.3",
     "readline": "^1.3.0",
