--- a/api/package.json
+++ b/api/package.json
@@ -8,17 +8,16 @@
     "fetch:users": "node tasks/fetchRepsUsers.js"
   },
   "dependencies": {
-    "body-parser": "~1.15.2",
-    "dateformat": "^2.0.0",
-    "debug": "~2.2.0",
+    "body-parser": "^1.18.2",
+    "dateformat": "^3.0.2",
+    "debug": "^3.1.0",
     "dom-storage": "^2.0.2",
-    "express": "~4.14.0",
-    "google-auth-library": "^0.10.0",
-    "googleapis": "^19.0.0",
-    "node-cron": "^1.2.0",
-    "node-fetch": "^1.6.3",
+    "express": "^4.16.2",
+    "google-auth-library": "^0.11.0",
+    "googleapis": "^22.2.0",
+    "node-cron": "^1.2.1",
+    "node-fetch": "^1.7.3",
     "promise-map-series": "^0.2.3",
-    "readline": "^1.3.0",
     "sanitize-html": "^1.14.1"
   }
 }
