Remove authentication as we don't need it anymore

--- a/api/package.json
+++ b/api/package.json
@@ -13,8 +13,7 @@
     "debug": "^3.1.0",
     "dom-storage": "^2.0.2",
     "express": "^4.16.2",
-    "google-auth-library": "^0.11.0",
-    "googleapis": "^22.2.0",
+    "google-spreadsheet": "^2.0.4",
     "node-cron": "^1.2.1",
     "node-fetch": "^1.7.3",
     "promise-map-series": "^0.2.3",
