--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -6,10 +6,9 @@ WORKDIR /code
 COPY . .
 RUN npm install
 
-RUN rm -f client_secret.json
-RUN rm -rf .credentials
 RUN rm -f db.json
 
 EXPOSE 6500
 
+ENV DEBUG *
 CMD ["pm2-docker", "start", "/code/index.js"]
