--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://activate.mozilla.community" # the base hostname & protocol for your site
 twitter_username: mozparticipate
 github_username:  mozilla
-api_base_url: http://localhost:6500
+api_base_url: https://activate.production.paas.mozilla.community
 
 # Build settings
 markdown: kramdown
