--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "activate-rewrite",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://rewrite.michaelkohler.info/",
   "dependencies": {
     "autoprefixer": "7.1.6",
     "babel-core": "^6.26.3",
@@ -57,7 +58,9 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "test": "node scripts/test.js --env=jsdom",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "jest": {
     "collectCoverageFrom": [
@@ -100,5 +103,8 @@
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.2.0"
   }
 }
