--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
-    "predeploy": "npm run build",
+    "predeploy": "npm run build && cp github_404.html build/404.html",
     "deploy": "gh-pages -d build"
   },
   "jest": {
