--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "private": true,
   "homepage": "https://rewrite.michaelkohler.info/",
   "dependencies": {
-    "@babel/core": "7.1.0",
-    "@babel/runtime": "7.0.0",
+    "@babel/core": "^7.1.1",
+    "@babel/runtime": "^7.1.1",
     "@svgr/webpack": "2.4.1",
     "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "9.0.0",
+    "babel-eslint": "^10.0.1",
     "babel-jest": "23.6.0",
-    "babel-loader": "8.0.2",
+    "babel-loader": "^8.0.4",
     "babel-plugin-named-asset-import": "^0.2.0",
     "babel-preset-react-app": "^4.0.0",
     "bfj": "6.1.1",
@@ -20,15 +20,15 @@
     "css-loader": "1.0.0",
     "dotenv": "6.0.0",
     "dotenv-expand": "4.2.0",
-    "eslint": "5.6.0",
+    "eslint": "^5.6.1",
     "eslint-config-react-app": "^3.0.0",
     "eslint-loader": "2.1.1",
-    "eslint-plugin-flowtype": "2.50.1",
+    "eslint-plugin-flowtype": "^2.50.3",
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.1",
     "eslint-plugin-react": "7.11.1",
     "file-loader": "2.0.0",
-    "fluent": "^0.8.0",
+    "fluent": "^0.8.1",
     "fluent-intl-polyfill": "^0.1.0",
     "fluent-langneg": "^0.1.0",
     "fluent-react": "^0.8.1",
@@ -42,12 +42,12 @@
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "postcss-flexbugs-fixes": "4.1.0",
     "postcss-loader": "3.0.0",
-    "postcss-preset-env": "6.0.6",
+    "postcss-preset-env": "^6.0.7",
     "postcss-safe-parser": "4.0.1",
     "react": "^16.4.2",
-    "react-app-polyfill": "^0.1.0",
+    "react-app-polyfill": "^0.1.1",
     "react-bootstrap": "^0.32.3",
-    "react-dev-utils": "^6.0.0",
+    "react-dev-utils": "^6.0.1",
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
@@ -60,7 +60,7 @@
     "terser-webpack-plugin": "1.1.0",
     "thread-loader": "1.2.0",
     "url-loader": "1.1.1",
-    "webpack": "4.19.1",
+    "webpack": "^4.20.2",
     "webpack-dev-server": "3.1.9",
     "webpack-manifest-plugin": "2.0.4"
   },
@@ -121,6 +121,6 @@
     "extends": "react-app"
   },
   "devDependencies": {
-    "gh-pages": "^1.2.0"
+    "gh-pages": "^2.0.0"
   }
 }
