--- a/package.json
+++ b/package.json
@@ -22,11 +22,15 @@
     "dotenv-expand": "4.2.0",
     "eslint": "^5.9.0",
     "eslint-config-react-app": "^3.0.5",
+    "eslint-config-standard": "^12.0.0",
     "eslint-loader": "2.1.1",
     "eslint-plugin-flowtype": "^2.50.3",
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.1",
+    "eslint-plugin-node": "^8.0.0",
+    "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-react": "7.11.1",
+    "eslint-plugin-standard": "^4.0.0",
     "file-loader": "2.0.0",
     "fluent": "^0.8.1",
     "fluent-intl-polyfill": "^0.1.0",
@@ -45,6 +49,7 @@
     "postcss-preset-env": "^6.4.0",
     "postcss-safe-parser": "4.0.1",
     "react": "^16.6.3",
+    "react-a11y": "^1.1.0",
     "react-app-polyfill": "^0.1.3",
     "react-bootstrap": "^0.32.3",
     "react-dev-utils": "^6.1.1",
@@ -67,6 +72,7 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
+    "format": "eslint --fix ./src",
     "test": "node scripts/test.js --env=jsdom",
     "predeploy": "npm run build && cp github_404.html build/404.html",
     "deploy": "gh-pages -d build"
@@ -118,9 +124,13 @@
     ]
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": "react-app",
+    "plugins": [
+      "jsx-a11y"
+    ]
   },
   "devDependencies": {
+    "eslint-plugin-only-warn": "^1.0.1",
     "gh-pages": "^2.0.1"
   }
 }
