--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@babel/core": "^7.1.6",
     "@babel/runtime": "^7.1.5",
     "@svgr/webpack": "2.4.1",
+    "acorn": "^6.0.4",
+    "ajv": "^6.5.5",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "23.6.0",
