--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-bootstrap": "^0.32.3",
     "react-dev-utils": "^6.1.1",
     "react-dom": "^16.6.3",
+    "react-feather": "^1.1.4",
     "react-redux": "^5.1.1",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.3.1",
