--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-app-polyfill": "^0.1.3",
     "react-bootstrap": "^0.32.3",
     "react-dev-utils": "^6.1.1",
+    "react-document-title": "^2.0.3",
     "react-dom": "^16.6.3",
     "react-feather": "^1.1.4",
     "react-redux": "^5.1.1",
