Adding link styles

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "activate-mozilla",
   "version": "0.2.0",
   "private": true,
-  "homepage": "https://activate.mozilla.community/",
+  "homepage": "https://rewrite.michaelkohler.info/",
   "dependencies": {
     "@babel/core": "^7.1.6",
     "@babel/runtime": "^7.1.5",
