--- a/package.json
+++ b/package.json
@@ -11,39 +11,39 @@
     "ajv": "^6.5.5",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "23.6.0",
-    "babel-loader": "^8.0.4",
-    "babel-plugin-named-asset-import": "^0.2.3",
+    "babel-loader": "^8.0.5",
+    "babel-plugin-named-asset-import": "^0.3.1",
     "babel-preset-react-app": "^4.0.0",
     "bfj": "6.1.1",
     "bootstrap": "^3.3.7",
     "case-sensitive-paths-webpack-plugin": "2.1.2",
-    "chalk": "2.4.1",
+    "chalk": "^2.4.2",
     "css-loader": "1.0.0",
     "dotenv": "6.0.0",
     "dotenv-expand": "4.2.0",
     "eslint": "^5.9.0",
-    "eslint-config-react-app": "^3.0.5",
+    "eslint-config-react-app": "^3.0.8",
     "eslint-config-standard": "^12.0.0",
-    "eslint-loader": "2.1.1",
+    "eslint-loader": "^2.1.2",
     "eslint-plugin-flowtype": "^2.50.3",
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.1",
-    "eslint-plugin-node": "^8.0.0",
+    "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-react": "7.11.1",
     "eslint-plugin-standard": "^4.0.0",
     "file-loader": "2.0.0",
-    "fluent": "^0.8.1",
+    "fluent": "^0.11.0",
     "fluent-intl-polyfill": "^0.1.0",
-    "fluent-langneg": "^0.1.0",
-    "fluent-react": "^0.8.2",
-    "fs-extra": "7.0.0",
+    "fluent-langneg": "^0.1.1",
+    "fluent-react": "^0.8.3",
+    "fs-extra": "^7.0.1",
     "history": "^4.7.2",
     "html-webpack-plugin": "4.0.0-alpha.2",
     "identity-obj-proxy": "3.0.0",
     "jest": "23.6.0",
     "loader-utils": "1.1.0",
-    "mini-css-extract-plugin": "0.4.3",
+    "mini-css-extract-plugin": "^0.5.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "postcss-flexbugs-fixes": "4.1.0",
     "postcss-loader": "3.0.0",
@@ -51,12 +51,12 @@
     "postcss-safe-parser": "4.0.1",
     "react": "^16.6.3",
     "react-a11y": "^1.1.0",
-    "react-app-polyfill": "^0.1.3",
+    "react-app-polyfill": "^0.2.2",
     "react-bootstrap": "^0.32.3",
     "react-dev-utils": "^6.1.1",
     "react-document-title": "^2.0.3",
     "react-dom": "^16.6.3",
-    "react-feather": "^1.1.4",
+    "react-feather": "^1.1.6",
     "react-redux": "^5.1.1",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.3.1",
@@ -64,11 +64,11 @@
     "redux-thunk": "^2.3.0",
     "resolve": "1.8.1",
     "sass-loader": "7.1.0",
-    "style-loader": "0.23.0",
+    "style-loader": "^0.23.1",
     "sw-precache-webpack-plugin": "0.11.5",
     "terser-webpack-plugin": "1.1.0",
     "thread-loader": "1.2.0",
-    "url-loader": "1.1.1",
+    "url-loader": "^1.1.2",
     "webpack": "^4.26.1",
     "webpack-dev-server": "3.1.9",
     "webpack-manifest-plugin": "2.0.4"
