--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "@babel/core": "^7.1.6",
     "@babel/runtime": "^7.1.5",
     "@svgr/webpack": "2.4.1",
-    "acorn": "^6.0.4",
-    "ajv": "^6.5.5",
+    "acorn": "^6.1.1",
+    "ajv": "^6.10.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "23.6.0",
     "babel-loader": "^8.0.5",
@@ -16,21 +16,21 @@
     "babel-preset-react-app": "^4.0.0",
     "bfj": "6.1.1",
     "bootstrap": "^3.3.7",
-    "case-sensitive-paths-webpack-plugin": "2.1.2",
+    "case-sensitive-paths-webpack-plugin": "^2.2.0",
     "chalk": "^2.4.2",
     "css-loader": "1.0.0",
-    "dotenv": "6.0.0",
+    "dotenv": "^6.2.0",
     "dotenv-expand": "4.2.0",
-    "eslint": "^5.9.0",
+    "eslint": "^5.15.1",
     "eslint-config-react-app": "^3.0.8",
     "eslint-config-standard": "^12.0.0",
     "eslint-loader": "^2.1.2",
     "eslint-plugin-flowtype": "^2.50.3",
-    "eslint-plugin-import": "2.14.0",
-    "eslint-plugin-jsx-a11y": "6.1.1",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "^4.0.1",
-    "eslint-plugin-react": "7.11.1",
+    "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-standard": "^4.0.0",
     "file-loader": "2.0.0",
     "fluent": "^0.11.0",
@@ -49,20 +49,20 @@
     "postcss-loader": "3.0.0",
     "postcss-preset-env": "^6.4.0",
     "postcss-safe-parser": "4.0.1",
-    "react": "^16.6.3",
+    "react": "^16.8.4",
     "react-a11y": "^1.1.0",
     "react-app-polyfill": "^0.2.2",
     "react-bootstrap": "^0.32.3",
     "react-dev-utils": "^6.1.1",
     "react-document-title": "^2.0.3",
-    "react-dom": "^16.6.3",
+    "react-dom": "^16.8.4",
     "react-feather": "^1.1.6",
     "react-redux": "^5.1.1",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
-    "resolve": "1.8.1",
+    "resolve": "^1.10.0",
     "sass-loader": "7.1.0",
     "style-loader": "^0.23.1",
     "sw-precache-webpack-plugin": "0.11.5",
