--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "homepage": "https://rewrite.michaelkohler.info/",
   "dependencies": {
-    "@babel/core": "^7.1.6",
-    "@babel/runtime": "^7.1.5",
+    "@babel/core": "^7.3.4",
+    "@babel/runtime": "^7.3.4",
     "@svgr/webpack": "2.4.1",
     "acorn": "^6.1.1",
     "ajv": "^6.10.0",
@@ -42,12 +42,12 @@
     "html-webpack-plugin": "4.0.0-alpha.2",
     "identity-obj-proxy": "3.0.0",
     "jest": "23.6.0",
-    "loader-utils": "1.1.0",
+    "loader-utils": "^1.2.3",
     "mini-css-extract-plugin": "^0.5.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "postcss-flexbugs-fixes": "4.1.0",
     "postcss-loader": "3.0.0",
-    "postcss-preset-env": "^6.4.0",
+    "postcss-preset-env": "^6.6.0",
     "postcss-safe-parser": "4.0.1",
     "react": "^16.8.4",
     "react-a11y": "^1.1.0",
@@ -66,11 +66,11 @@
     "sass-loader": "7.1.0",
     "style-loader": "^0.23.1",
     "sw-precache-webpack-plugin": "0.11.5",
-    "terser-webpack-plugin": "1.1.0",
+    "terser-webpack-plugin": "^1.2.3",
     "thread-loader": "1.2.0",
     "url-loader": "^1.1.2",
-    "webpack": "^4.26.1",
-    "webpack-dev-server": "3.1.9",
+    "webpack": "^4.29.6",
+    "webpack-dev-server": "^3.2.1",
     "webpack-manifest-plugin": "2.0.4"
   },
   "scripts": {
