--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "@babel/core": "^7.3.4",
     "@babel/runtime": "^7.3.4",
-    "@svgr/webpack": "2.4.1",
+    "@svgr/webpack": "^4.1.0",
     "acorn": "^6.1.1",
     "ajv": "^6.10.0",
     "babel-core": "7.0.0-bridge.0",
@@ -17,7 +17,7 @@
     "bootstrap": "^3.3.7",
     "case-sensitive-paths-webpack-plugin": "^2.2.0",
     "chalk": "^2.4.2",
-    "css-loader": "1.0.0",
+    "css-loader": "^2.1.1",
     "dotenv": "^6.2.0",
     "dotenv-expand": "4.2.0",
     "eslint": "^5.15.1",
@@ -31,7 +31,7 @@
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-standard": "^4.0.0",
-    "file-loader": "2.0.0",
+    "file-loader": "^3.0.1",
     "fluent": "^0.11.0",
     "fluent-intl-polyfill": "^0.1.0",
     "fluent-langneg": "^0.1.1",
@@ -65,7 +65,7 @@
     "style-loader": "^0.23.1",
     "sw-precache-webpack-plugin": "0.11.5",
     "terser-webpack-plugin": "^1.2.3",
-    "thread-loader": "1.2.0",
+    "thread-loader": "^2.1.2",
     "url-loader": "^1.1.2",
     "webpack": "^4.29.6",
     "webpack-dev-server": "^3.2.1",
