--- a/package.json
+++ b/package.json
@@ -4,17 +4,37 @@
   "private": true,
   "homepage": "https://rewrite.michaelkohler.info/",
   "dependencies": {
+    "bootstrap": "^3.4.1",
+    "fluent": "^0.11.0",
+    "fluent-intl-polyfill": "^0.1.0",
+    "fluent-langneg": "^0.1.1",
+    "fluent-react": "^0.8.3",
+    "history": "^4.7.2",
+    "react": "^16.8.4",
+    "react-a11y": "^1.1.0",
+    "react-app-polyfill": "^0.2.2",
+    "react-bootstrap": "^0.32.3",
+    "react-document-title": "^2.0.3",
+    "react-dom": "^16.8.4",
+    "react-feather": "^1.1.6",
+    "react-redux": "^5.1.1",
+    "react-router-bootstrap": "^0.24.4",
+    "react-router-dom": "^4.3.1",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
+  },
+  "devDependencies": {
     "@babel/core": "^7.3.4",
     "@babel/runtime": "^7.3.4",
     "@svgr/webpack": "^4.1.0",
     "acorn": "^6.1.1",
     "ajv": "^6.10.0",
     "babel-core": "7.0.0-bridge.0",
+    "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
     "babel-plugin-named-asset-import": "^0.3.1",
     "babel-preset-react-app": "^4.0.0",
     "bfj": "6.1.1",
-    "bootstrap": "^3.4.1",
     "case-sensitive-paths-webpack-plugin": "^2.2.0",
     "chalk": "^2.4.2",
     "css-loader": "^2.1.1",
@@ -28,16 +48,13 @@
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-only-warn": "^1.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-standard": "^4.0.0",
     "file-loader": "^3.0.1",
-    "fluent": "^0.11.0",
-    "fluent-intl-polyfill": "^0.1.0",
-    "fluent-langneg": "^0.1.1",
-    "fluent-react": "^0.8.3",
     "fs-extra": "^7.0.1",
-    "history": "^4.7.2",
+    "gh-pages": "^2.0.1",
     "html-webpack-plugin": "4.0.0-alpha.2",
     "identity-obj-proxy": "3.0.0",
     "loader-utils": "^1.2.3",
@@ -47,19 +64,7 @@
     "postcss-loader": "3.0.0",
     "postcss-preset-env": "^6.6.0",
     "postcss-safe-parser": "4.0.1",
-    "react": "^16.8.4",
-    "react-a11y": "^1.1.0",
-    "react-app-polyfill": "^0.2.2",
-    "react-bootstrap": "^0.32.3",
     "react-dev-utils": "^7.0.5",
-    "react-document-title": "^2.0.3",
-    "react-dom": "^16.8.4",
-    "react-feather": "^1.1.6",
-    "react-redux": "^5.1.1",
-    "react-router-bootstrap": "^0.24.4",
-    "react-router-dom": "^4.3.1",
-    "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0",
     "resolve": "^1.10.0",
     "sass-loader": "7.1.0",
     "style-loader": "^0.23.1",
@@ -94,10 +99,5 @@
     "plugins": [
       "jsx-a11y"
     ]
-  },
-  "devDependencies": {
-    "babel-eslint": "^10.0.1",
-    "eslint-plugin-only-warn": "^1.0.1",
-    "gh-pages": "^2.0.1"
   }
 }
