--- a/package.json
+++ b/package.json
@@ -4,80 +4,82 @@
   "private": true,
   "homepage": "https://rewrite.michaelkohler.info/",
   "dependencies": {
-    "@babel/core": "^7.1.6",
-    "@babel/runtime": "^7.1.5",
-    "@svgr/webpack": "2.4.1",
-    "acorn": "^6.0.4",
-    "ajv": "^6.5.5",
-    "babel-core": "7.0.0-bridge.0",
-    "babel-jest": "23.6.0",
-    "babel-loader": "^8.0.4",
-    "babel-plugin-named-asset-import": "^0.2.3",
-    "babel-preset-react-app": "^4.0.0",
-    "bfj": "6.1.1",
-    "bootstrap": "^3.3.7",
-    "case-sensitive-paths-webpack-plugin": "2.1.2",
-    "chalk": "2.4.1",
-    "css-loader": "1.0.0",
-    "dotenv": "6.0.0",
-    "dotenv-expand": "4.2.0",
-    "eslint": "^5.9.0",
-    "eslint-config-react-app": "^3.0.5",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-loader": "2.1.1",
-    "eslint-plugin-flowtype": "^2.50.3",
-    "eslint-plugin-import": "2.14.0",
-    "eslint-plugin-jsx-a11y": "6.1.1",
-    "eslint-plugin-node": "^8.0.0",
-    "eslint-plugin-promise": "^4.0.1",
-    "eslint-plugin-react": "7.11.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "file-loader": "2.0.0",
-    "fluent": "^0.8.1",
+    "bootstrap": "^3.4.1",
+    "fluent": "^0.11.0",
     "fluent-intl-polyfill": "^0.1.0",
-    "fluent-langneg": "^0.1.0",
-    "fluent-react": "^0.8.2",
-    "fs-extra": "7.0.0",
+    "fluent-langneg": "^0.1.1",
+    "fluent-react": "^0.8.3",
     "history": "^4.7.2",
-    "html-webpack-plugin": "4.0.0-alpha.2",
-    "identity-obj-proxy": "3.0.0",
-    "jest": "23.6.0",
-    "loader-utils": "1.1.0",
-    "mini-css-extract-plugin": "0.4.3",
-    "optimize-css-assets-webpack-plugin": "5.0.1",
-    "postcss-flexbugs-fixes": "4.1.0",
-    "postcss-loader": "3.0.0",
-    "postcss-preset-env": "^6.4.0",
-    "postcss-safe-parser": "4.0.1",
-    "react": "^16.6.3",
+    "react": "^16.8.4",
     "react-a11y": "^1.1.0",
-    "react-app-polyfill": "^0.1.3",
+    "react-app-polyfill": "^0.2.2",
     "react-bootstrap": "^0.32.3",
-    "react-dev-utils": "^6.1.1",
     "react-document-title": "^2.0.3",
-    "react-dom": "^16.6.3",
-    "react-feather": "^1.1.4",
+    "react-dom": "^16.8.4",
+    "react-feather": "^1.1.6",
     "react-redux": "^5.1.1",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0",
-    "resolve": "1.8.1",
+    "redux-thunk": "^2.3.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.3.4",
+    "@babel/runtime": "^7.3.4",
+    "@svgr/webpack": "^4.1.0",
+    "acorn": "^6.1.1",
+    "ajv": "^6.10.0",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.5",
+    "babel-plugin-named-asset-import": "^0.3.1",
+    "babel-preset-react-app": "^4.0.0",
+    "bfj": "6.1.1",
+    "case-sensitive-paths-webpack-plugin": "^2.2.0",
+    "chalk": "^2.4.2",
+    "css-loader": "^2.1.1",
+    "dotenv": "^6.2.0",
+    "dotenv-expand": "4.2.0",
+    "eslint": "^5.15.1",
+    "eslint-config-react-app": "^3.0.8",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-loader": "^2.1.2",
+    "eslint-plugin-flowtype": "^3.4.2",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-only-warn": "^1.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-standard": "^4.0.0",
+    "file-loader": "^3.0.1",
+    "fs-extra": "^7.0.1",
+    "gh-pages": "^2.0.1",
+    "html-webpack-plugin": "4.0.0-alpha.2",
+    "identity-obj-proxy": "3.0.0",
+    "loader-utils": "^1.2.3",
+    "mini-css-extract-plugin": "^0.5.0",
+    "optimize-css-assets-webpack-plugin": "5.0.1",
+    "postcss-flexbugs-fixes": "4.1.0",
+    "postcss-loader": "3.0.0",
+    "postcss-preset-env": "^6.6.0",
+    "postcss-safe-parser": "4.0.1",
+    "react-dev-utils": "^7.0.5",
+    "resolve": "^1.10.0",
     "sass-loader": "7.1.0",
-    "style-loader": "0.23.0",
+    "style-loader": "^0.23.1",
     "sw-precache-webpack-plugin": "0.11.5",
-    "terser-webpack-plugin": "1.1.0",
-    "thread-loader": "1.2.0",
-    "url-loader": "1.1.1",
-    "webpack": "^4.26.1",
-    "webpack-dev-server": "3.1.9",
+    "terser-webpack-plugin": "^1.2.3",
+    "thread-loader": "^2.1.2",
+    "url-loader": "^1.1.2",
+    "webpack": "^4.29.6",
+    "webpack-dev-server": "^3.2.1",
     "webpack-manifest-plugin": "2.0.4"
   },
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "format": "eslint --fix ./src",
-    "test": "node scripts/test.js --env=jsdom",
     "predeploy": "npm run build && cp github_404.html build/404.html",
     "deploy": "gh-pages -d build"
   },
@@ -87,41 +89,6 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "jest": {
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx}"
-    ],
-    "setupFiles": [
-      "react-app-polyfill/jsdom"
-    ],
-    "testMatch": [
-      "<rootDir>/src/**/__tests__/**/*.{js,jsx}",
-      "<rootDir>/src/**/?(*.)(spec|test).{js,jsx}"
-    ],
-    "testEnvironment": "jsdom",
-    "testURL": "http://localhost",
-    "transform": {
-      "^.+\\.(js|jsx)$": "<rootDir>/node_modules/babel-jest",
-      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
-      "^(?!.*\\.(js|jsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
-    },
-    "transformIgnorePatterns": [
-      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx)$",
-      "^.+\\.module\\.(css|sass|scss)$"
-    ],
-    "moduleNameMapper": {
-      "^react-native$": "react-native-web",
-      "^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy"
-    },
-    "moduleFileExtensions": [
-      "web.js",
-      "js",
-      "json",
-      "web.jsx",
-      "jsx",
-      "node"
-    ]
-  },
   "babel": {
     "presets": [
       "react-app"
@@ -132,10 +99,5 @@
     "plugins": [
       "jsx-a11y"
     ]
-  },
-  "devDependencies": {
-    "babel-eslint": "^9.0.0",
-    "eslint-plugin-only-warn": "^1.0.1",
-    "gh-pages": "^2.0.1"
   }
 }
