--- a/package.json
+++ b/package.json
@@ -54,7 +54,6 @@
     "eslint-plugin-standard": "^4.0.0",
     "file-loader": "^3.0.1",
     "fs-extra": "^7.0.1",
-    "gh-pages": "^2.0.1",
     "html-webpack-plugin": "4.0.0-alpha.2",
     "identity-obj-proxy": "3.0.0",
     "loader-utils": "^1.2.3",
@@ -78,10 +77,8 @@
   },
   "scripts": {
     "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
-    "format": "eslint --fix ./src",
-    "predeploy": "npm run build && cp github_404.html build/404.html",
-    "deploy": "gh-pages -d build"
+    "build": "node scripts/build.js && cp github_404.html build/404.html",
+    "format": "eslint --fix ./src"
   },
   "browserslist": [
     ">0.2%",
