--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-document-title": "^2.0.3",
     "react-dom": "^16.8.4",
     "react-feather": "^1.1.6",
+    "react-gtm-module": "^2.0.4",
     "react-redux": "^5.1.1",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.3.1",
