--- a/package.json
+++ b/package.json
@@ -39,22 +39,22 @@
     "case-sensitive-paths-webpack-plugin": "^2.2.0",
     "chalk": "^2.4.2",
     "css-loader": "^2.1.1",
-    "dotenv": "^6.2.0",
-    "dotenv-expand": "4.2.0",
-    "eslint": "^5.15.1",
-    "eslint-config-react-app": "^3.0.8",
-    "eslint-config-standard": "^12.0.0",
+    "dotenv": "^8.0.0",
+    "dotenv-expand": "^5.1.0",
+    "eslint": "^6.1.0",
+    "eslint-config-react-app": "^4.0.1",
+    "eslint-config-standard": "^13.0.1",
     "eslint-loader": "^2.2.1",
     "eslint-plugin-flowtype": "^3.12.1",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-node": "^9.1.0",
     "eslint-plugin-only-warn": "^1.0.1",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-standard": "^4.0.0",
     "file-loader": "^3.0.1",
-    "fs-extra": "^7.0.1",
+    "fs-extra": "^8.1.0",
     "html-webpack-plugin": "4.0.0-alpha.2",
     "identity-obj-proxy": "3.0.0",
     "loader-utils": "^1.2.3",
